--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'groovyx.android'
 
 android {
     compileSdkVersion 26
@@ -20,6 +21,9 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'WEATHER_ADDRESS', WEATHER_ADDRESS
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -32,6 +36,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.codehaus.groovy:groovy-all:2.4.12'
+    testImplementation 'org.spockframework:spock-core:1.1-groovy-2.4-rc-3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
