--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3'
     annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3'
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.codehaus.groovy:groovy-all:2.4.12'
     testImplementation 'org.spockframework:spock-core:1.1-groovy-2.4-rc-3'
